test/sema/typeck/var/undefined-variable1.out
error: unknown identifier `a`.
--> undefined-variable1.dora:1:18
 | fn f() { let b = a; }
                    ~
 | 
1 error found.
