test/sema/typeck/var/undefined-variable1.dora
fn f() { let b = a; }
